fixed layout issues for herosection and added hover effect for buttons

--- a/src/app/mainpage/contactfault/contactfault.component.scss
+++ b/src/app/mainpage/contactfault/contactfault.component.scss
@@ -24,6 +24,11 @@
 
         img {
             width: 30px;
+
+            &:hover {
+                cursor: pointer;
+                width: 40px;
+            }
         }
     }
 
